--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.56.1",
     "agora-rtc-react": "^2.5.0",
     "agora-rtc-sdk-ng": "^4.24.0",
+    "agora-rtm-sdk": "^2.2.3-1",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
     "framer-motion": "^12.23.12",
